<resources>
    <string name="app_name">Фоторедактор</string>
    <string name="new_note">Новая запись</string>
    <string name="stickers">Стикеры</string>
    <string name="fonts">Шрифты</string>
    <string name="roboto_font_name">Roboto</string>
    <string name="lobster_font_name">Lobster</string>
    <string name="amatic_font_name">Amatic</string>
    <string name="save">Сохранить</string>
    <string name="from_gallery">Из галереи</string>
    <string name="make_photo">Сделать фото</string>
    <string name="upload_image">Загрузить изображение</string>
    <string name="select_photo">Выберите фото</string>
    <string name="editor_message_hint">Что у Вас нового?</string>

</resources>
