<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTextView.16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sticker_selection_title_text_view_height"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:text="@string/stickers" />

        <TextView
            android:id="@+id/robotoTextView"
            style="@style/FontSelectionTextView"
            android:text="@string/roboto_font_name" />

        <TextView
            android:id="@+id/amaticTextView"
            style="@style/FontSelectionTextView"
            android:text="@string/amatic_font_name" />

        <TextView
            android:id="@+id/lobsterTextView"
            style="@style/FontSelectionTextView"
            android:text="@string/lobster_font_name" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>