<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fontImageView"
            style="@style/ToolbarImageView"
            android:src="@drawable/ic_toolbar_font" />

        <TextView
            style="@style/AppTextView.16.Center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_note" />

        <ImageView
            android:id="@+id/selectStickerImageView"
            style="@style/ToolbarImageView"
            android:src="@drawable/ic_toolbar_sticker" />
    </LinearLayout>

    <EditText
        android:id="@+id/helloWorldTextView"
        style="@style/AppTextView.24.Center.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_48"
        android:layout_marginRight="@dimen/margin_48"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/editor_message_hint"
        app:layout_constraintBottom_toTopOf="@+id/bottomBarLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/backgroundSelectionRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveButton"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/save_button_height"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/bg_save_button"
            android:foreground="?selectableItemBackground"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>